--- a/Python_Classes.ipynb
+++ b/Python_Classes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO44K9NUBtuvObzPM2FNGeV",
+      "authorship_tag": "ABX9TyMV85sbWE13iMBc4JVhOVIP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,7 +204,69 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "class Employee:\n",
+        "\n",
+        "    num_of_emps = 0\n",
+        "    raise_amt = 1.04\n",
+        "\n",
+        "    def __init__(self, first, last, pay):\n",
+        "        self.first = first\n",
+        "        self.last = last\n",
+        "        self.email = first + '.' + last + '@email.com'\n",
+        "        self.pay = pay\n",
+        "\n",
+        "        Employee.num_of_emps += 1\n",
+        "\n",
+        "    def fullname(self):\n",
+        "        return '{} {}'.format(self.first, self.last)\n",
+        "\n",
+        "    def apply_raise(self):\n",
+        "        self.pay = int(self.pay * self.raise_amt)\n",
+        "\n",
+        "    @classmethod\n",
+        "    def set_raise_amt(cls, amount):\n",
+        "        cls.raise_amt = amount\n",
+        "\n",
+        "    @classmethod\n",
+        "    def from_string(cls, emp_str):\n",
+        "        first, last, pay = emp_str.split('-')\n",
+        "        return cls(first, last, pay)\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def is_workday(day):\n",
+        "        if day.weekday() == 5 or day.weekday() == 6:\n",
+        "            return False\n",
+        "        return True\n",
+        "\n",
+        "\n",
+        "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
+        "emp_2 = Employee('Test', 'Employee', 60000)\n",
+        "\n",
+        "Employee.set_raise_amt(1.05)\n",
+        "\n",
+        "print(Employee.raise_amt)\n",
+        "print(emp_1.raise_amt)\n",
+        "print(emp_2.raise_amt)\n",
+        "\n",
+        "emp_str_1 = 'John-Doe-70000'\n",
+        "emp_str_2 = 'Steve-Smith-30000'\n",
+        "emp_str_3 = 'Jane-Doe-90000'\n",
+        "\n",
+        "first, last, pay = emp_str_1.split('-')\n",
+        "\n",
+        "#new_emp_1 = Employee(first, last, pay)\n",
+        "new_emp_1 = Employee.from_string(emp_str_1)\n",
+        "\n",
+        "print(new_emp_1.email)\n",
+        "print(new_emp_1.pay)\n",
+        "\n",
+        "import datetime\n",
+        "my_date = datetime.date(2016, 7, 11)\n",
+        "\n",
+        "print(Employee.is_workday(my_date))"
+      ],
       "metadata": {
         "id": "AJiUdQCkFMAi"
       },
