--- a/tensor_1.ipynb
+++ b/tensor_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+1j3cXUwn4gFe6ehMsivC",
+      "authorship_tag": "ABX9TyPatq+nzck8/gKslV/5XDVw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
         "id": "uhIbvXG3J7ip"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensor\n"
+      ]
     }
   ]
 }
